--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,61 @@
 /*Schrijf hier jouw CSS*/
+
+body{
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+
+nav{
+
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+    min-width: 20vw;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+
+
+
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+
+header{
+    flex-basis: 10vw;
+
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+
+main{
+
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+
+
+article {
+    flex-basis: auto;
+
+    flex-grow: 1;
+}
+
+footer{
+    flex-basis: 10vw;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
