--- a/deel-2-flexbox-layout/opdracht-5/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-5/styles/styles.css
@@ -1,1 +1,41 @@
 /*Schrijf hier jouw CSS*/
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    min-height: 20vh;
+    flex-shrink: 0;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+}
+
+article {
+    flex-grow: 3;
+    order: 2;
+}
+
+nav {
+order: 1;
+    flex-grow: 1;
+    flex-shrink: 0;
+    min-width: 20vh;
+}
+
+aside {
+order: 3;
+    flex-grow: 1;
+    flex-shrink: 0;
+    min-width: 20vh;
+}
+
+footer{
+    min-height: 20vh;
+    flex-shrink: 0;
+}
